--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
