--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
+    "sass": "^1.72.0",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
